# nstil

./: .gitignore  AGENTS.md  AGENT_CONTEXT.md  DEPLOYMENT.md  LICENSE  README.md  ROADMAP.md  SETUP.md  agent.toml  docker-compose.yml  justfile  mkdocs.yml  sonar-project.properties
apps/backend/: .env.example  Dockerfile  pyproject.toml
apps/backend/src/nstil/: config.py  main.py
apps/backend/src/nstil/api/: body_limit_middleware.py  deps.py  middleware.py  rate_limit_middleware.py  router.py  upload.py
apps/backend/src/nstil/core/: app_state.py  exceptions.py  jwks.py  (+2 more)
apps/backend/tests/: README.md  conftest.py  factories.py
apps/backend/tests/api/: conftest.py  test_body_limit_middleware.py  test_rate_limit_middleware.py  test_upload.py
apps/backend/tests/core/: test_config.py  test_jwks.py  test_jwt_utils.py  test_security.py
apps/backend/tests/models/: test_ai_feedback.py  test_ai_insight.py  test_ai_message.py  test_ai_profile.py  test_ai_prompt.py  test_ai_session.py  test_ai_task.py  test_breathing.py  test_calendar.py  test_journal.py  test_media.py  test_mood.py  test_notification.py  test_pagination.py  test_profile.py  test_space.py
apps/backend/tests/observability/: test_processors.py
apps/backend/tests/services/: test_cached_ai_context.py  test_cached_ai_profile.py  test_cached_journal.py  test_cached_notification.py  test_cached_profile.py  test_cached_space.py  test_check_in_orchestrator.py  test_entry_cache.py  test_insight_computations.py  test_prompt_bank.py  test_rate_limit.py  test_rate_limit_config.py  test_token_blacklist.py
(+593 files in other folders)
